Late commit. Update Installation.md
Added in the Java FX download into installation.md